AKS-04/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: AKS-04
  labels:
    app: AKS-04
spec:
  selector:
    app: AKS-04
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
